[package]
name = "mirl_values"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mirl_extensions = { version = "0.0.0-alpha", features = ["mirl_values"] }
mirl_values_core = { version = "0.0.0-alpha" }

# For the "dynamic" numbers
num-bigint = "0.4.2"
num-bigfloat = "1.7"
num-traits = "0.2.19"

# # Settings
# indexmap = { version = "1.0", optional = true }

# Support
toml = { version = "1.1", optional = true }
# lightningcss = { version = "1.0-alpha.71", optional = true }

mirl_derive = { version = "0.0.0-alpha", optional = true }
# Codec
compactly = { version = "0.1.6", optional = true }
serde = { version = ">=1.0", optional = true, default-features = false, features = [
    "derive",
] }
bitcode = { version = "0.6.9", optional = true, default-features = false, features = [
    "derive",
] }
wincode = { version = "0.5.3", optional = true, features = ["derive"] }
zerocopy = { version = "0.8.48", optional = true, default-features = false, features = [
    "float-nightly",
    "derive",
] }

# Enum functionality
strum = { version = ">=0.28", optional = true, default-features = false, features = [
    "derive",
] }
enum_ext = { version = "0.6.0", optional = true, default-features = false }


serde_json = { version = "1.0.149", optional = true}
[lints]
workspace = true

[features]
all = ["all_codecs", "all_enum_extensions", "toml", "serde_json"]

# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = ["dep:mirl_derive"]
# Compatibility with ffi
c_compatible = ["mirl_derive"]
# Enables all codecs
all_codecs = ["serde", "bitcode", "wincode", "compactly", "zerocopy"]
# All enum extensions
all_enum_extensions = ["strum", "enum_ext"]

# Codec stuff
serde = ["dep:serde", "mirl_derive", "mirl_values_core/serde"]
bitcode = ["dep:bitcode", "mirl_derive", "mirl_values_core/bitcode"]
wincode = ["dep:wincode", "mirl_derive", "mirl_values_core/wincode"]
compactly = ["dep:compactly", "mirl_derive", "mirl_values_core/compactly"]
zerocopy = ["dep:zerocopy", "mirl_derive", "mirl_values_core/zerocopy"]

# Enum extensions
strum = ["dep:strum", "mirl_derive"]
enum_ext = ["dep:enum_ext", "mirl_derive"]

# preserve_entries = ["mirl_values_core/preserve_entries"]
_checking = ["toml", "serde_json"]
# Support
toml = ["dep:toml", "mirl_values_core/toml"]
serde_json = ["dep:serde_json"]
serde_json_arbitrary_precision = [
    "serde_json",
    "serde_json/arbitrary_precision",
]

# css = ["dep:lightningcss"]
[build-dependencies]
mirl_build_tools = { workspace = true }
