[package]
name = "mirl_values"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
all = [
    "all_codecs",
    "all_enum_extensions",
    "dep:toml",
    "dep:serde_json",
    "mirl_extensions/all",
    "mirl_values_core/all",
]
# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = ["dep:mirl_derive", "mirl_values_core/mirl_derive"]
# Compatibility with ffi
c_compatible = [
    "mirl_derive",
    "mirl_extensions/c_compatible",
    "mirl_values_core/c_compatible",
]
# Enables all codecs
all_codecs = [
    "dep:serde",
    "dep:bitcode",
    "dep:wincode",
    "dep:compactly",
    "dep:zerocopy",
    "mirl_values_core/all_codecs",
]
# All enum extensions
all_enum_extensions = ["dep:strum", "dep:enum_ext", "mirl_values_core/all_enum_extensions"]
# Codec stuff
serde = [
    "dep:serde",
    "dep:mirl_derive",
    "mirl_values_core/serde",
    "bitcode?/serde",
    "num-bigfloat/serde",
    "num-bigint/serde",
    "toml?/serde",
]
bitcode = ["dep:bitcode", "mirl_derive", "mirl_values_core/bitcode"]
wincode = ["dep:wincode", "mirl_derive", "mirl_values_core/wincode"]
compactly = ["dep:compactly", "mirl_derive", "mirl_values_core/compactly"]
zerocopy = ["dep:zerocopy", "mirl_derive", "mirl_values_core/zerocopy"]
# Enum extensions
strum = ["dep:strum", "mirl_derive", "mirl_values_core/strum"]
enum_ext = ["dep:enum_ext", "dep:mirl_derive", "mirl_values_core/enum_ext"]
# preserve_entries = ["mirl_values_core/preserve_entries"]
_checking = ["toml", "serde_json"]
# Support
toml = ["dep:toml", "mirl_values_core/toml"]
serde_json = ["dep:serde_json"]
serde_json_arbitrary_precision = ["serde_json", "serde_json?/arbitrary_precision"]

[dependencies]
bitcode = { version = "0.6", optional = true, default-features = false, features = [
    "derive",
] }
# Codec
compactly = { version = "0.1", optional = true }
enum_ext = { version = "0.6", optional = true, default-features = false }
# lightningcss = { version = "1.0-alpha.71", optional = true }
mirl_derive = { version = "0.0.0-alpha", optional = true }
mirl_extensions = { version = "0.0.0-alpha", features = ["mirl_values"] }
mirl_values_core = { version = "0.0.0-alpha" }
num-bigfloat = "1.7"
# For the "dynamic" numbers
num-bigint = "0.5"
num-traits = "0.2.19"
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
serde_json = { version = "1.0", optional = true }
# Enum functionality
strum = { version = "0.28", optional = true, default-features = false, features = [
    "derive",
] }
# # Settings# indexmap = { version = "1.0", optional = true }
# Support
toml = { version = "1.1", optional = true }
wincode = { version = "0.5", optional = true, features = ["derive"] }
zerocopy = { version = "0.8", optional = true, default-features = false, features = [
    "float-nightly",
    "derive",
] }

# css = ["dep:lightningcss"]
[build-dependencies]
mirl_build_tools = { workspace = true }
[lints]
workspace = true
